# C-MemoryMuncher

./: CMakeLists.txt  Makefile  README.md  barrier.h  muncher.c  muncher.h
tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cow_system_test.c  malloc_heap_test  malloc_heap_test.c  munch_functionality  munch_functionality.c  munch_heap_test  munch_heap_test.c  standard_malloc  standard_malloc.c
